# liketrain

./: Cargo.toml  README.md  justfile
crates/liketrain-avr/: Cargo.toml  Ravedude.toml  justfile  rust-toolchain.toml
crates/liketrain-avr/.cargo/: config.toml
crates/liketrain-avr/src/: command.rs  main.rs  mode.rs  throttle.rs
crates/liketrain-avr/src/pcint/: atmega2560.rs  mod.rs
crates/liketrain-avr/src/rs485/: mod.rs
crates/liketrain-avr/src/serial/: deser.rs  mod.rs
crates/liketrain-avr/src/sim/: mod.rs
crates/liketrain-avr/src/slave/: command.rs  mod.rs  response.rs
crates/liketrain-avr/src/track/: mod.rs  section.rs
crates/liketrain-core/: Cargo.toml
crates/liketrain-core/src/: direction.rs  lib.rs
crates/liketrain-core/src/controller/: comm.rs  error.rs  event.rs  mod.rs  scheduler.rs  state.rs
crates/liketrain-core/src/controller/comm/: flow.rs  mod.rs  serial.rs
crates/liketrain-core/src/controller/comm/sim/: mod.rs  train.rs
crates/liketrain-core/src/controller/ui/: command.rs  event.rs  mod.rs
crates/liketrain-core/src/parser/: eval.rs  mod.rs  section.rs  tests.rs
crates/liketrain-core/src/route/: mod.rs
crates/liketrain-core/src/serial/: ext.rs  mod.rs  tests.rs
crates/liketrain-core/src/track/: connection.rs  error.rs  geo.rs  mod.rs  section.rs  switch.rs  transition.rs
crates/liketrain-core/src/train/: mod.rs  mode.rs  speed.rs  state.rs
crates/liketrain-core/tests/: integration.rs
crates/liketrain-ui/: Cargo.toml
crates/liketrain-ui/src/: app_ext.rs  assets.rs  controller.rs  main.rs
crates/liketrain-ui/src/controller/: mod.rs  section.rs  train.rs
crates/liketrain-ui/src/ebula/: mod.rs  theme.rs
crates/liketrain-ui/src/layout/: camera.rs  color.rs  mod.rs  switch.rs  vec.rs
crates/liketrain-ui/src/ui/: mod.rs
crates/liketrain-ui/src/ui/scroll/: mod.rs  scrollable.rs  scrollable_mask.rs  scrollbar.rs
crates/liketrain-ui/src/window/: controls.rs
crates/liketrain-ui/src/window/controls/: logs.rs  mod.rs  panel_type.rs
crates/liketrain-ui/src/window/controls/panels/: controller.rs  layout.rs  logs.rs  mod.rs
crates/liketrain-ui/src/window/controls/section/: mod.rs  table.rs
crates/liketrain-ui/tests/: integration.rs
liketrain-arduino/: platformio.ini
resources/: geo.json  (+2 more)
(+54 files in other folders)
