[package]
name = "liketrain-avr"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "liketrain-avr"
test = false
bench = false

[dependencies]
panic-halt = "1.0.0"
ufmt = "0.2.0"
nb = "1.1.0"
embedded-hal = "1.0"
embedded-alloc = "0.7.0"

[dependencies.liketrain-hardware]
path = "../liketrain-hardware"
features = ["avr"]

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "e5c8f37fe48419956e722490a82b9ca9b9fc61a2"
features = ["arduino-mega2560"]

[dependencies.avr-device]
version = "0.8.1"
features = ["atmega2560"]

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
