[package]
name = "liketrain-core"
version = "0.1.0"
edition = "2024"

[dependencies]
chumsky = "0.12.0"
thiserror = "2"

liketrain-hardware = { path = "../liketrain-hardware" }
serialport = "4.8.1"
crossbeam.workspace = true

serde.workspace = true
serde_json.workspace = true

itertools.workspace = true
log.workspace = true

[dev-dependencies]
env_logger = "0.11.9"
