[package]
name = "liketrain-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed" }
kiss_xml = "1.0.6"

liketrain-core = { path = "../liketrain-core" }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

log = "0.4.29"
env_logger = "0.11.9"
vek = "0.17.2"
