[package]
name = "liketrain-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit"] }
kiss_xml = "1.0.6"

liketrain-core = { path = "../liketrain-core" }

serde.workspace = true
serde_json.workspace = true

itertools.workspace = true
log.workspace = true

env_logger = "0.11.9"
vek = "0.17.2"
either = "1.15.0"

strum = {version = "0.28.0", features = ["derive"]}
chrono = "0.4.44"
rust-embed = "8.11.0"
anyhow = "1.0.102"
